[tool.poetry]
name = "Bootcamp Functions"
version = "1.1.0"
description = "CDF Functions for Bootcamp"
authors = ["Hakon Treider <hakon.treider@cognite.com>"]

[tool.poetry.dependencies]
python = "~3.9"
pytest-custom-exit-code = "^0, >=0.3"
cognite-extractor-utils = "^6.3.2"
pandas = "*"
pydantic = "*"
ujson = "*"
retry = "*"
cognite-sdk = "^7.17.1"

[tool.poetry.dev-dependencies]
pytest = "*"
pre-commit = "*"

[tool.isort]
profile = "black"
force_single_line = false
atomic = true
lines_after_imports = 2
lines_between_types = 1
line_length = 120
known_third_party = ["cognite","pytest"]

[tool.black]
line-length = 120
